--- a/11.DOM/styles.css
+++ b/11.DOM/styles.css
@@ -2,6 +2,10 @@
     --yellow-color: #F8DF1E;
     --dark-color: #222;
 }
+.cards{
+    border: thin solid var(--dark-color);
+    padding: 1rem;
+}
 .card{
     display: inline-block;
     background-color: var(--dark-color);
