arreglos boton hamburguesa

--- a/12.Ejercicios_dom/css/style.css
+++ b/12.Ejercicios_dom/css/style.css
@@ -24,6 +24,10 @@ body{
     margin: 0;
     overflow-x: hidden;
 }
+img {
+    max-width: 100%;
+    height: auto;
+}
 /************** menu-hamburguesa **************/
 header{
     position: sticky;
@@ -55,12 +59,20 @@ header h1{
     right: 0;
     width: 100%;
     background-color: var(--second-modal-color);
-    transition: transform .3s ease;
-    /*De arriba*/
-    transform: translate(0, -100%);
+    opacity: 0;
+    transition: transform 0.3s ease, opacity 0.5s ease;
+    /* De arriba */
+    /*transform: translate(0, -100%);*/
+    /* De abajo */
+    /*transform: translate(0, 100%);*/    
+    /* De la derecha */
+    /*transform: translate(100%, 0);*/
+    /* De la izquierda */
+    /*transform: translate(-100%, 0);*/
 }
 .panel.is-active{
-    transform: translate(0, 0);
+    /*transform: translate(0, 0);*/
+    opacity: 1;
 }
 .panel-btn{
     position: fixed;
