--- a/spa/app/assets/style.css
+++ b/spa/app/assets/style.css
@@ -77,7 +77,7 @@ img{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
 }
-/*   Posts */
+/*   main */
 .post-card{
     margin: 1rem auto;
     padding: 1rem;
